# stage_crypto_bot

./: README.md
cpp/: CMakeLists.txt
cpp/BOTMAIN/: ORDERSENDER  ORDERSENDER.cpp  i.cpp  main.cpp  orderTest.cpp  redis.h  runner.sh  websocket.cpp  websocket_client
cpp/BOTMAIN/includes/: Constants.h  HTTPCLIENT.h
cpp/BOTMAIN/libs/apis/database/: position.h
cpp/BOTMAIN/libs/apis/exchanges/: karakin.h
cpp/BOTMAIN/tests/: kraken_order  orderTest.cpp
cpp/install/: installation.sh
cpp/market_data_server/: CMakeLists.txt  WebSocketHandler.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
cpp/market_data_server/exchanges/: KrakenClient.cpp  KrakenClient.h
python/: BarChart.py  Order  Order Logs  OrderLogs  app.py  botApp.py  requirements.txt
python/Tests/: getAccounts.py  websocketTest.py
python/app/: BarChart.py  __init__.py  config.py  database.py  models.py
python/app/controllers/: bot_control.py  redisutil.py
python/app/controllers/crud/: positionCrud.py  tradingpair.py
python/app/exchanges/binancne/: websocketClient.py
python/app/exchanges/kerkaren/: kraken.py  webSocketClient.py
python/app/routes/: backup  botRoutes.py  exchangeRoutes.py  position_routes.py  trading_pair_routes.py  transaction_routes.py
python/app/routes/auth/: user_routes.py  users.py
python/app/static/: krakenWorker.js
python/app/templates/: dashboard.html  history.html  home.html  login.html  pairDetail.html  parDetail  register.html
python/app/tests/: test_Barchart.py
python/app/util/: Constant.py  Util.py
python/myenv/: pyvenv.cfg
tests/: class.py
